syntax = "proto3";
package tendermint.spn.profile;

import "gogoproto/gogo.proto";
import "profile/validator.proto";
import "profile/coordinator.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/tendermint/spn/x/profile/types";

// GenesisState defines the profile module's genesis state.
message GenesisState {
  repeated Validator validatorList = 1 [(gogoproto.nullable) = false];
  repeated ValidatorByConsAddress validatorByConsAddressList = 2 [(gogoproto.nullable) = false];
  repeated Coordinator coordinatorList = 3 [(gogoproto.nullable) = false];
  uint64 coordinatorCounter = 4;
  repeated CoordinatorByAddress coordinatorByAddressList = 5 [(gogoproto.nullable) = false];
  repeated ConsensusKeyNonce consensusKeyNonceList = 6 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
