syntax = "proto3";
package tendermint.spn.profile;

option go_package = "github.com/tendermint/spn/x/profile/types";

message ValidatorByAddress {
  string creator = 1;
  string address = 2;
  string consensusAddress = 3;
  ValidatorDescription description = 4;
}

message ValidatorDescription {
  string identity = 1;
  string website = 2;
  string details = 3;
}