syntax = "proto3";
package tendermint.spn.types;

import "gogoproto/gogo.proto";

option go_package = "github.com/tendermint/spn/pkg/types";


// MonitoringPacket is the packet sent over IBC that contains all the signature counts
message MonitoringPacket {
  uint64 blockHeight = 1;
  SignatureCounts signatureCounts = 2 [(gogoproto.nullable) = false];
}


// SignatureCounts contains information about signature reporting for a number of blocks
message SignatureCounts {
  uint64 blockCount = 1;
  repeated SignatureCount counts = 2 [(gogoproto.nullable) = false];
}


// SignatureCount contains information of signature reporting for one specific validator with consensus address
// RelativeSignatures is the sum of all signatures relative to the validator set size
message SignatureCount {
  string consAddress = 1;
  string RelativeSignatures = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
}
